SF Primes/src/objects/Service_Contract__c.object
<CustomObject>
    <description>Service Contracts from Oracle</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Contract</relationshipLabel>
        <relationshipName>Service_Contract</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt_Consolidation_ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contract_Line_ID__c</fullName>
        <externalId>true</externalId>
        <label>Contract Line ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Billing_Amount__c</fullName>
        <label>Current Billing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Copay__c</fullName>
        <label>Dealer Copay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Instance_Number__c</fullName>
        <label>Instance Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Bill_Customer_Name__c</fullName>
        <label>Bill To Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Bill_Customer_Number__c</fullName>
        <label>Bill To Customer Number</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Bill_Location__c</fullName>
        <label>Line Bill Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_End_Date__c</fullName>
        <label>Line End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Start_Date__c</fullName>
        <label>Line Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_Status__c</fullName>
        <label>Line Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Next_Billing_Amount__c</fullName>
        <label>Next Billing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Line_Details__c</fullName>
        <label>Order Line Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line_Number__c</fullName>
        <label>Order Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Secondary__c</fullName>
        <label>Primary/Secondary</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shrt_Product__c</fullName>
        <formula>LEFT( Description__c , 50)</formula>
        <label>Shrt_Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebID__c</fullName>
        <label>WebID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Contract</label>
    <nameField>
        <label>Contract Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Contract</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>